# seo-audit-for-claude-code

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
.claude/agents/: seo-audit-menu-accessibility.md  seo-audit-menu-architecture.md  seo-audit-menu-crawlability.md  seo-audit-menu-fetcher.md  seo-audit-menu-link-equity.md  seo-audit-menu-orchestrator.md  seo-audit-menu-performance.md  seo-audit-menu-reporter.md  seo-audit-menu-reviewer.md  seo-audit-menu-semantic.md
.claude/commands/: audit-menu.md
.claude/skills/seo-audit-menu-accessibility/: SKILL.md
.claude/skills/seo-audit-menu-accessibility/references/: mobile_first.md  wcag_nav.md
.claude/skills/seo-audit-menu-architecture/: SKILL.md
.claude/skills/seo-audit-menu-comparator/: SKILL.md
.claude/skills/seo-audit-menu-crawlability/: SKILL.md
.claude/skills/seo-audit-menu-fetcher/: SKILL.md
.claude/skills/seo-audit-menu-link-equity/: SKILL.md
.claude/skills/seo-audit-menu-parser/: SKILL.md
.claude/skills/seo-audit-menu-performance/: SKILL.md
.claude/skills/seo-audit-menu-reporter/: SKILL.md
.claude/skills/seo-audit-menu-semantic/: SKILL.md
.github/: pull_request_template.md
audits/: .gitkeep
knowledge/: README.md  menu-audit-checklist-v0.3.md
shared/: __init__.py  html_utils.py  severity.py
tests/: test_parser.py
tests/fixtures/: mobile_issues.html  radix_burger_portal.html  sample_menu.html
tests/integration/: test_burger_radix.js  test_mobile_checks.js
tools/: audit_completeness_checker.py  coverage_report.py
(+28 files in other folders)
